# interface library for headers only module
add_library(webcat INTERFACE)

# modules linking to this library will include following
# directories. two options are provided for installed package
# and for in-tree source build
target_include_directories(webcat INTERFACE
    $<INSTALL_INTERFACE:include/webcat>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

# libraries this module links to
target_link_libraries(webcat INTERFACE belt.pp)

# what to do on make install
install(TARGETS webcat
        EXPORT webcat.package
        DESTINATION ${WEBCAT_INSTALL_DESTINATION_LIBRARY})

set(SRC_FILES
    global.hpp
    server.hpp)

install(FILES
    ${SRC_FILES}
    DESTINATION ${WEBCAT_INSTALL_DESTINATION_INCLUDE}/webcat)

#
# add custom target simply for IDE to show the files
#
add_custom_target(webcat.include SOURCES
    ${SRC_FILES})
